--- a/ch03-04-comments.html
+++ b/ch03-04-comments.html
@@ -191,7 +191,7 @@
     let lucky_number = 7; // 幸運 777！
 }
 </code></pre></pre>
-<p>不過你會更常看到它們用用以下格式，註解會爲於要說明的程式碼上一行：</p>
+<p>不過你會更常看到它們用用以下格式，註解會位於要說明的程式碼上一行：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
 <pre><pre class="playground"><code class="language-rust">fn main() {
     // 幸運 777！
