--- a/ch11-01-writing-tests.html
+++ b/ch11-01-writing-tests.html
@@ -392,7 +392,7 @@ mod tests {
 
     #[test]
     fn larger_can_hold_smaller() {
-        // --snip--
+        // --省略--
 <span class="boring">        let larger = Rectangle {
 </span><span class="boring">            width: 8,
 </span><span class="boring">            height: 7,
@@ -448,7 +448,7 @@ test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 </span><span class="boring">    height: u32,
 </span><span class="boring">}
 </span><span class="boring">
-</span>// --snip--
+</span>// --省略--
 impl Rectangle {
     fn can_hold(&amp;self, other: &amp;Rectangle) -&gt; bool {
         self.width &lt; other.width &amp;&amp; self.height &gt; other.height
@@ -764,7 +764,7 @@ test result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out
 </span><span class="boring">    value: i32,
 </span><span class="boring">}
 </span><span class="boring">
-</span>// --snip--
+</span>// --省略--
 impl Guess {
     pub fn new(value: i32) -&gt; Guess {
         if value &lt; 1 {
@@ -816,7 +816,7 @@ error: test failed, to rerun pass '--lib'
 </span><span class="boring">    value: i32,
 </span><span class="boring">}
 </span><span class="boring">
-</span>// --snip--
+</span>// --省略--
 impl Guess {
     pub fn new(value: i32) -&gt; Guess {
         if value &lt; 1 {
