--- a/ch16-02-message-passing.html
+++ b/ch16-02-message-passing.html
@@ -319,7 +319,7 @@ Got: thread
 </span><span class="boring">use std::time::Duration;
 </span><span class="boring">
 </span><span class="boring">fn main() {
-</span>    // --snip--
+</span>    // --省略--
 
     let (tx, rx) = mpsc::channel();
 
@@ -356,7 +356,7 @@ Got: thread
         println!(&quot;Got: {}&quot;, received);
     }
 
-    // --snip--
+    // --省略--
 <span class="boring">}
 </span></code></pre></pre>
 <p><span class="caption">範例 16-11：從多重生產者傳遞數個訊息</span></p>
