--- a/ch19-04-advanced-types.html
+++ b/ch19-04-advanced-types.html
@@ -206,11 +206,11 @@
 </span>    let f: Box&lt;dyn Fn() + Send + 'static&gt; = Box::new(|| println!(&quot;hi&quot;));
 
     fn takes_long_type(f: Box&lt;dyn Fn() + Send + 'static&gt;) {
-        // --snip--
+        // --省略--
     }
 
     fn returns_long_type() -&gt; Box&lt;dyn Fn() + Send + 'static&gt; {
-        // --snip--
+        // --省略--
 <span class="boring">        Box::new(|| ())
 </span>    }
 <span class="boring">}
@@ -223,11 +223,11 @@
     let f: Thunk = Box::new(|| println!(&quot;hi&quot;));
 
     fn takes_long_type(f: Thunk) {
-        // --snip--
+        // --省略--
     }
 
     fn returns_long_type() -&gt; Thunk {
-        // --snip--
+        // --省略--
 <span class="boring">        Box::new(|| ())
 </span>    }
 <span class="boring">}
@@ -284,7 +284,7 @@ pub trait Write {
 <h3><a class="header" href="#永不回傳的永不型別" id="永不回傳的永不型別">永不回傳的永不型別</a></h3>
 <p>Rust 有一個特殊的型別叫做 <code>!</code>，由於它沒有任何值，在型別理論的行話中又稱為<strong>空型別（empty type）</strong>。不過我們更喜歡稱之為<strong>永不型別（never type）</strong>，因為當一個函式永遠不會回傳，永不型別將會替代原本的回傳型別。這裡來個範例:</p>
 <pre><pre class="playground"><code class="language-rust">fn bar() -&gt; ! {
-    // --snip--
+    // --省略--
 <span class="boring">    panic!();
 </span>}
 <span class="boring">
@@ -308,7 +308,7 @@ pub trait Write {
 </span><span class="boring">
 </span><span class="boring">        let mut guess = String::new();
 </span><span class="boring">
-</span><span class="boring">        // --snip--
+</span><span class="boring">        // --省略--
 </span><span class="boring">
 </span><span class="boring">        io::stdin()
 </span><span class="boring">            .read_line(&amp;mut guess)
@@ -321,7 +321,7 @@ pub trait Write {
 <span class="boring">
 </span><span class="boring">        println!(&quot;你的猜測數字：{}&quot;, guess);
 </span><span class="boring">
-</span><span class="boring">        // --snip--
+</span><span class="boring">        // --省略--
 </span><span class="boring">
 </span><span class="boring">        match guess.cmp(&amp;secret_number) {
 </span><span class="boring">            Ordering::Less =&gt; println!(&quot;太小了！&quot;),
@@ -389,17 +389,17 @@ pub trait Write {
 <p>我們將各種指標與 <code>str</code> 結合，例如 <code>Box&lt;str&gt;</code> 或 <code>Rc&lt;str&gt;</code>。事實上，你早已看過此類作法，不過是在其他動態大小型別上看過，那個型別就是特徵（trait）。每個特徵都是一個動態大小型別，我們可以透過使用特徵的名字來指涉它。在第十七章的<a href="ch17-02-trait-objects.html#%E5%85%81%E8%A8%B1%E4%B8%8D%E5%90%8C%E5%9E%8B%E5%88%A5%E6%95%B8%E5%80%BC%E7%9A%84%E7%89%B9%E5%BE%B5%E7%89%A9%E4%BB%B6">「允許不同型別數值的特徵物件」</a>部分，我們提及欲將特徵做為特徵物件（trait object）來使用，必須將特徵放在指標之後，例如 <code>&amp;dyn Trait</code> 或 <code>Box&lt;dyn Trait&gt;</code>（<code>Rc&lt;dyn Trait&gt;</code> 也行）。</p>
 <p>為了使用 DST，Rust 提供一個 <code>Sized</code> 特徵，來決定一個型別的大小可否在編譯期就確定下來。對於能在編譯期得知大小的所有東西，都會自動實作這個特徵。此外 Rust 自動替所有泛型函式隱含加上 <code>Sized</code> 的約束（bound）。也就是說若一泛型函數定義如下：</p>
 <pre><code class="language-rust ignore">fn generic&lt;T&gt;(t: T) {
-    // --snip--
+    // --省略--
 }
 </code></pre>
 <p>實際上就如同寫成這樣：</p>
 <pre><code class="language-rust ignore">fn generic&lt;T: Sized&gt;(t: T) {
-    // --snip--
+    // --省略--
 }
 </code></pre>
 <p>預設情形下，泛型函式只能在編譯器得知大小的型別上使用。然而，你可以加上以下這個特殊語言來放寬這個限制：</p>
 <pre><code class="language-rust ignore">fn generic&lt;T: ?Sized&gt;(t: &amp;T) {
-    // --snip--
+    // --省略--
 }
 </code></pre>
 <p><code>?Sized</code> 特徵約束與 <code>Sized</code> 特徵約束的效果相反：可以解讀為「<code>T</code> 可能是或不是 <code>Sized</code>」。這個語法只能用在 <code>Sized</code>，不適用於其他特徵。</p>
